# tiler

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deps.sh  pyproject.toml  ticketsplease.toml  tool-versions.toml
.ticketsplease/: views.toml
crates/tiler-artifact/: Cargo.toml
crates/tiler-artifact/src/: lib.rs
crates/tiler-compiler/: Cargo.toml
crates/tiler-compiler/src/: capability.rs  explain.rs  feasibility.rs  fusion.rs  legality.rs  lib.rs  normalize.rs  physical.rs  pipeline.rs  program.rs  region.rs  request.rs
crates/tiler-ir/: Cargo.toml
crates/tiler-ir/src/: lib.rs  reference.rs  semantic.rs  shape.rs
crates/tiler-ir/src/index/: builder.rs  error.rs  handles.rs  integer.rs  mod.rs  model.rs  scalar.rs
crates/tiler-ir/src/semantic/: error.rs  handles.rs  identity.rs  interface.rs  operation.rs  program.rs  registry.rs  shape_evidence.rs  standard_operations.rs  types.rs
crates/tiler-ir/src/shape/: evidence.rs
crates/tiler-ir/tests/: index_region.rs  index_region_ui.rs  shape_evidence.rs  shape_evidence_ui.rs  typed_handles.rs
crates/tiler-ir/tests/index-region/fail/: forge_verified.rs  forge_verified.stderr
crates/tiler-ir/tests/index-region/pass/: additive_authoring.rs
crates/tiler-ir/tests/shape-evidence/fail/: forge_shaped_value.rs  forge_shaped_value.stderr  forge_witness.rs  forge_witness.stderr  implement_evidence.rs  implement_evidence.stderr  mismatched_operand_evidence.rs  mismatched_operand_evidence.stderr  rank_array_length.rs  rank_array_length.stderr  shape_array_rank_limit.rs  shape_array_rank_limit.stderr
crates/tiler-ir/tests/shape-evidence/pass/: checked_refinement.rs
crates/tiler-ir/tests/typed-handles/fail/: erased_misuse.rs  erased_misuse.stderr  forge.rs  forge.stderr  forge_semantic_identity.rs  forge_semantic_identity.stderr  mixed_types.rs  mixed_types.stderr  private_authority_limits.rs  private_authority_limits.stderr  retype.rs  retype.stderr
crates/tiler-ir/tests/typed-handles/pass/: checked_authoring.rs
crates/tiler-metal/: Cargo.toml
crates/tiler-metal/src/: lib.rs
crates/tiler-reference/: Cargo.toml
crates/tiler-reference/src/: arithmetic.rs  lib.rs  oracle.rs
crates/tiler-reference/tests/: index_region_oracle.rs  serial_sum_slice.rs
docs/: README.md  architecture.md  artifact-abi.md  correctness-and-testing.md  design-map.md  document-metadata.md  glossary.md  ir.md  numerical-semantics.md  open-questions.md  operation-extensions.md  roadmap.md  status.md  vision.md  work-tracking.md
docs/backends/: cpu.md  (+1 more)
prototypes/serial-sum-compile/: Cargo.toml
prototypes/serial-sum-compile/src/: main.rs
prototypes/serial-sum-run/: Cargo.toml
prototypes/serial-sum-run/src/: main.rs
scripts/: check_ci.py  check_repository.py  check_rust.py  check_workspace.py  docs.py
spikes/: README.md
spikes/extensions/proc-macro-visibility/macro/: Cargo.toml
spikes/extensions/proc-macro-visibility/macro/src/: lib.rs
spikes/shapes/nightly-dependent-static-shapes/: .gitignore  Cargo.toml  README.md  check.sh  measure.py  rust-toolchain.toml
spikes/shapes/nightly-dependent-static-shapes/aliases-a/: Cargo.toml
spikes/shapes/nightly-dependent-static-shapes/aliases-a/src/: lib.rs
spikes/shapes/nightly-dependent-static-shapes/aliases-b/: Cargo.toml
spikes/shapes/nightly-dependent-static-shapes/aliases-b/src/: lib.rs
spikes/shapes/nightly-dependent-static-shapes/api/: Cargo.toml
spikes/shapes/nightly-dependent-static-shapes/api/src/: lib.rs
spikes/shapes/nightly-dependent-static-shapes/conformance/: Cargo.toml
spikes/shapes/nightly-dependent-static-shapes/conformance/src/: lib.rs
spikes/shapes/nightly-dependent-static-shapes/conformance/tests/: features.rs  runtime.rs  ui.rs
spikes/shapes/nightly-dependent-static-shapes/conformance/tests/ui/fail/: forge.rs  forge.stderr  implement_evidence.rs  implement_evidence.stderr  rank_array_length.rs  rank_array_length.stderr  unequal_shapes.rs  unequal_shapes.stderr
spikes/shapes/nightly-dependent-static-shapes/conformance/tests/ui/pass/: cross_crate_identity.rs  ranks.rs
spikes/shapes/nightly-dependent-static-shapes/measurements/: summary.json
spikes/shapes/nightly-dependent-static-shapes/probes/: borrowed_slice.rs  reduction_rank_generic_const_exprs.rs  reduction_rank_selected.rs  reduction_transform_associated_type.rs  reduction_transform_generic_const_args.rs  reduction_transform_generic_const_exprs.rs  reduction_transform_selected.rs  runtime_axis_expected_output.rs  scalar_broadcast_preserves_operand.rs  selected.rs  without_dependent_types.rs  without_min_adt.rs
spikes/shapes/nightly-dependent-static-shapes/shape-macro/: Cargo.toml
spikes/shapes/nightly-dependent-static-shapes/shape-macro/src/: lib.rs
spikes/shapes/nightly-dependent-static-shapes/workload/: Cargo.toml
spikes/shapes/nightly-dependent-static-shapes/workload/src/: lib.rs
tickets/: add-checked-closure-convenience-for-shared-ir-builders.md  adopt-nightly-dependent-static-shapes.md  apple-artifact-compatibility.md  artifact-envelope-model.md  cache-crash-race-harness.md  calibrate-device-cost-models.md  close-remaining-adr-status-drift.md  close-semantic-identity-test-gaps.md  correct-capability-index-ticket-order.md  correct-reference-value-and-authority-contracts.md  correct-semantic-identity-layering.md  cost-model-bootstrap.md  decouple-status-prose-from-the-live-board.md  define-dtype-namespace-admission-policy.md  define-implementation-status-for-superseded-decisions.md  define-initial-affine-quantization-semantics.md  define-quantized-value-binding-contract.md  device-placement-and-memory-domain-contract.md  docs-blank-agent-audit.md  docs-integrity-gate.md  docs-navigation-metadata.md  docs-provenance-core.md  docs-provenance-numerics.md  docs-provenance-runtime.md  docs-status-reconciliation.md  embedded-artifact-costs.md  enforce-repository-validation-gate-integrity.md  enumerate-the-mature-tensor-dtype-taxonomy.md  external-storage-resource-scope-gate.md  harden-compiler-verifier-subject-binding-and-totality.md  harden-docs-validator-coverage.md  (+125 more)
(+300 files in other folders)
