[package]
name = "tiler-compiler"
description = "Target-independent optimization and scheduling for Tiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
tiler-ir.workspace = true

[dev-dependencies]
tiler-reference.workspace = true

[lints]
workspace = true
