[package]
name = "tiler-ir"
description = "Target-independent tensor compiler representations for Tiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true

[dev-dependencies]
trybuild.workspace = true
