[package]
name = "tiler-reference"
description = "Target-independent executable reference semantics for Tiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
tiler-ir.workspace = true

[lints]
workspace = true
