[package]
name = "tiler-prototype-compile"
description = "Non-published producer for Tiler's serial-Sum value proof"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
tiler-artifact.workspace = true
tiler-compiler.workspace = true
tiler-ir.workspace = true
tiler-metal.workspace = true
tiler-reference.workspace = true

[lints]
workspace = true
