[package]
name = "tiler-prototype-run"
description = "Non-published runner for Tiler's serial-Sum value proof"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "tiler-prototype-run"
path = "src/main.rs"
test = true
doc = true

[dependencies]
tiler-artifact.workspace = true

[lints]
workspace = true
